[package]
name = "gpts-code-analyst"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
async-std = "1.12.0"
awc = { version = "3.2.0", features = ["rustls-0_21"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
